Fix image/icon alignment

--- a/ckanext/querytool/assets/less/public-query-tool.less
+++ b/ckanext/querytool/assets/less/public-query-tool.less
@@ -889,6 +889,7 @@ div[class^="dt-header"] {
   margin-right: 0;
   margin-left: 0;
   --bs-gutter-x: 0;
+  margin-bottom: 25px;
 }
 
 .home-groups {
@@ -902,15 +903,35 @@ div[class^="dt-header"] {
 .querytool-thumbnail {
   max-width: 100px !important;
   float: left;
-  margin-right: 20px;
+  margin-right: 30px;
+  padding-top: 25px;
+}
+
+.querytool-thumbnail-groups {
+  max-width: 100px !important;
+  float: left;
+  margin-right: 15px;
+  margin-top: 4px;
+}
+
+.querytool-thumbnail-groups-report {
+  max-width: 100px !important;
+  margin-top: 8px;
 }
 
 .querytool-thumbnail-default {
   float: left;
-  margin-right: 20px;
+  margin-right: 30px;
+  padding-top: 25px;
 }
 
 .box-content.bc-querytool {
   display: flex;
-  align-items: center;
+  align-items: flex-start
+}
+
+h3.media-heading {
+  margin-bottom: 6px !important;
+  font-weight: bold !important;
+  font-size: 1.5em !important;
 }
